# online-cinema-api-service

./: .env.sample  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose-dev.yml  pyproject.toml
.github/workflows/: ci.yml
commands/: run_migration.sh  run_web_server_dev.sh  setup_mailhog_auth.sh  setup_minio.sh
docker/mailhog/: Dockerfile
docker/minio_mc/: Dockerfile
docker/nginx/: .env.sample  Dockerfile
src/: main.py
src/config/: __init__.py  dependencies.py  settings.py
src/database/: __init__.py  session_postgresql.py  session_sqlite.py
src/database/crud/: accounts.py  movies.py  orders.py  payments.py  shopping_cart.py
src/database/migrations/: env.py
src/database/models/: accounts.py  base.py  movies.py  orders.py  payments.py  shopping_cart.py
src/database/validators/: accounts.py  profiles.py  shopping_cart.py
src/exceptions/: __init__.py  payments.py  storage.py
src/notifications/: emails.py  interfaces.py
src/notifications/templates/: activation_request.html  password_reset_complete.html  password_reset_request.html  payment_success.html
src/routes/: accounts.py  genres.py  movies.py  orders.py  payments.py  profiles.py  shopping_cart.py  stars.py
src/schemas/: __init__.py  accounts.py  movies.py  orders.py  payments.py  profiles.py  shopping_cart.py
src/security/: __init__.py  http.py  interfaces.py  passwords.py  token_manager.py
src/services/: celery_app.py  payments.py  tasks.py
src/storages/: interfaces.py  s3.py
src/utils/: __init__.py  dependencies.py
(+3 files in other folders)
